--- a/BookPoolV2/Views/Checkout/PlacedOrder.cshtml
+++ b/BookPoolV2/Views/Checkout/PlacedOrder.cshtml
@@ -24,8 +24,9 @@
 
         <div class="col s12 m12 l12" style="text-align: center;margin-top: 20px;">
             <h5>
-                <a href="/Order/MyOrders">View Order</a>
+                <a href="@Url.Action("MyOrders", "Home")">View Order</a>
             </h5>
         </div>
 
     </div>
+
