--- a/BookPoolV2/Views/Shared/_Layout.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout.cshtml
@@ -1,8 +1,4 @@
-﻿
-@{
-    Layout = null;
-}
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,7 +11,7 @@
     <link type="text/css" href="/Content/css/shop/styles.css" rel="stylesheet">
     <link type="text/css" href="/Content/css/quantity.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-    <link type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet" />
     <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="manifest" href="/Content/manifest.json">
     <!-- ios support -->
@@ -23,19 +19,43 @@
     <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4">
     <meta name="theme-color" content="#FFE1C4">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.css" />
+
+    <!--fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,500,500i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
+    <meta name="theme-color" content="#FFE1C4" />
+    <link rel="manifest" href="/manifest.webmanifest" />
 
     <style>
-        .slider {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            bottom: 0;
-            overflow: hidden;
-            background-color: var(--primary);
-            color: #FFF;
-            transition: all 0.5s;
+        .modal {
             z-index: 2147483647 !important;
+            max-height:inherit!important;
         }
+
+            .modal .modal-footer .btn, .modal .modal-footer .btn-large, .modal .modal-footer .btn-small, .modal .modal-footer .btn-flat {
+                min-width: 200px;
+                text-align: center;
+                color: white;
+                font-weight: bold;
+            }
+
+            .slider {
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                bottom: 0;
+                overflow: hidden;
+                background-color: var(--primary);
+                color: #FFF;
+                transition: all 0.5s;
+                z-index: 2147483647 !important;
+            }
 
             .slider.close {
                 bottom: 0;
@@ -65,23 +85,16 @@
 
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
     <script type="text/javascript" src="/Content/js/shop/materialize.min.js"></script>
     <script src="/Content/js/shop/ui.js"></script>
     <script src="/Content/js/shopui.js"></script>
     <script src="/Content/js/quantity.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/classie/1.0.1/classie.min.js"></script>
+    <script src="/Content/js/dynamics.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/11.1.0/nouislider.min.css" />
 
-    <!--fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,500,500i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
-    <meta name="theme-color" content="#FFE1C4" />
-    <link rel="manifest" href="/manifest.webmanifest" />
+
 </head>
 
 <body class="white lighten-4">
@@ -125,57 +138,25 @@
             </div>
         </li>
         <li>
-            <a href="/User/Wishes" class="waves-effect">
-                Wishes
+            <a href="@Url.Action("MyWishes","Home")" class="waves-effect">
+                My Wishes
                 <i class="material-icons float-right">arrow_right</i>
             </a>
         </li>
         <li>
-            <a href="/User/Notifications" class="waves-effect">
-                Notifications
+            <a href="@Url.Action("MyBooks","Home")" class="waves-effect">
+                My Books
                 <i class="material-icons float-right">arrow_right</i>
             </a>
         </li>
         <li>
-            <a href="/User/Payment" class="waves-effect">
-                Payment Options
+            <a href="@Url.Action("MyOrders","Home")" class="collapsible-header waves-effect">
+                My Orders
                 <i class="material-icons float-right">arrow_right</i>
             </a>
         </li>
         <li>
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header waves-effect">
-                        Orders
-                        <i class="material-icons float-right">arrow_drop_down</i>
-                    </a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li>
-                                <a href="/Order/MyOrders">
-                                    Your Orders
-                                    <i class="material-icons">card_giftcard</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="sidenav-trigger" data-target="side-form">
-                                    Address Book
-                                    <i class="material-icons">location_on</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="/Order/MyReturns">
-                                    Your Returns
-                                    <i class="material-icons">assignment_return</i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <li>
-            <a href="/Home/About" class="waves-effect">
+            <a href="@Url.Action("About","Home")" class="waves-effect">
                 About
                 <i class="material-icons float-right">arrow_right</i>
             </a>
@@ -192,7 +173,7 @@
         <form class="add-recipe container section">
             <h6>Saved Addresses</h6>
             <div class="row">
-                <div class="col s12 m12" style="padding:0;">
+                <div class="col s12 m12" style="padding:0!important;">
                     <div class="card">
                         <div class="card-content" style="padding:10px;">
                             <span class="card-title" style="line-height:10px; font-size:15px; font-weight:500;">
@@ -207,7 +188,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col s12 m12" style="padding:0;">
+                <div class="col s12 m12" style="padding:0!important;">
                     <div class="card">
                         <div class="card-content" style="padding:10px;">
                             <span class="card-title" style="line-height:10px; font-size:15px; font-weight:500;">
@@ -282,16 +263,35 @@
         </div>
     </div>
 
-    <div class="navbarFooter">
+
+    <div class="row" id="messageFooter">
+        <div id="messageFooterContainer">
+            <div id="messageFooterContainerLeft">
+                <div style="width:100%; height:25px; padding-top:5px;">
+                    <span id="itemsInCartFooter" style="color:white; letter-spacing:5px;"></span>
+                </div>
+                <div style="width:100%; height:25px; padding-top:5px;">
+                    <span id="costOfItemsInCartFooter" style="color:white; letter-spacing:5px;">LBP 8500</span>
+                </div>
+            </div>
+            <div id="messageFooterContainerRight">
+                <div style="width:100%; height:55px; padding-top:15px; vertical-align:middle; text-align:right;">
+                    <span style="color:white;">View Cart <i class="material-icons white-text" style="vertical-align:middle;">play_arrow</i></span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="navbarFooter" style="box-shadow: 0px 0 10px rgba(0, 0, 0, 0.8);">
         <div id="innerFooterContainer" style="margin:auto;">
-            <a href="/" class="active">
-                <i id="itemsPageFooter" class="material-icons-outlined" style="color: var(--primaryGrey);">shopping_basket</i>
+            <a id="books-section-navigator" href="@Url.Action("Index","Home")">
+                <i class="fa fa-book" aria-hidden="true" style="color: var(--primaryGrey);"></i>
             </a>
-            <a href="/Shops">
-                <i id="shopsPageFooter" class="material-icons-outlined" style="color: var(--primaryGrey);">store</i>
+            <a id="magazines-section-navigator" href="@Url.Action("Index","Magazines")">
+                <i class="fa fa-newspaper-o" aria-hidden="true" style="color: var(--primaryGrey);"></i>
             </a>
-            <a href="/Maps">
-                <i id="mapsPageFooter" class="material-icons-outlined" style="color: var(--primaryGrey);">map</i>
+            <a id="academic-section-navigator" href="@Url.Action("Index","Academic")">
+                <i class="fa fa-university" aria-hidden="true" style="color: var(--primaryGrey);"></i>
             </a>
         </div>
     </div>
@@ -324,25 +324,26 @@
 
         $(document).on('click', '.gotoproduct', function () {
             var category = $(this).data('data-productId');
-            var url = '/Products/Product';
+            var url = '@Url.Action("Product","Home")';
             window.location = url;
         });
 
-        $(document).on('click', '.gotoshop', function () {
+        $(document).on('click', '.gotouserbooks', function () {
+            console.log('Here');
             var shopId = $(this).data('data-shopId');
-            var url = '/Shops/Shop';
+            var url = '@Url.Action("FilteredProducts","Home")';
             window.location = url;
         });
 
         $(document).on('click', '#messageFooterContainer', function () {
             var shopId = $(this).data('data-shopId');
-            var url = '/Checkout';
+            var url = '@Url.Action("Index","Checkout")';
             window.location = url;
         });
 
         $(document).on('click', '#placeOrder', function () {
             var shopId = $(this).data('data-shopId');
-            var url = '/Order/PlacedOrder';
+            var url = '@Url.Action("PlacedOrder","Checkout")';
             window.location = url;
         });
 
@@ -384,17 +385,11 @@
 
         $(document).ready(function () {
 
-            productsSection_active();
-
             $('.category').click(function () {
                 var category = $(this).data('data-category');
-                var url = '/Products/FilteredProducts';
+                var url = '@Url.Action("FilteredProducts", "Home")';
                 window.location = url;
             });
-
-        });
-
-        $(document).ready(function () {
 
             $('.ratingFilter').click(function () {
                 var filterStar = parseInt($(this).attr('data-star'));
@@ -417,6 +412,7 @@
         });
 
     </script>
+
 </body>
 
 </html>
