--- a/BookPoolV2/Views/Home/Index.cshtml
+++ b/BookPoolV2/Views/Home/Index.cshtml
@@ -471,8 +471,8 @@
                             <p class="card-text" style="margin-bottom:6px;margin-top:6px;color:var(--primaryGrey);">
                                 Price: 20,000LL
                             </p>
-                            <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
-                                Is it worth swimming in shark-infested waters to surf a 50-foot, career-record wav...
+                            <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:forestgreen;">
+                                Someone wants to sell this book
                             </p>
                             <p class="card-text" style="margin-bottom: 0px;margin-top:6px;color:black;font-size:13px;font-weight:bold;">
                                 <i class="material-icons" style="font-size:12px;">location_on</i> Beirut
@@ -502,6 +502,9 @@
                             <p class="card-text" style="margin-bottom:6px;margin-top:6px;color:var(--primaryGrey);">
                                 Price: 20,000LL
                             </p>
+                            <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:forestgreen;">
+                                Someone wants to sell this book
+                            </p>
                             <p class="card-text" style="margin-bottom: 0px;margin-top:6px;color:black;font-size:13px;font-weight:bold;">
                                 <i class="material-icons" style="font-size:12px;">location_on</i> Beirut
                             </p>
@@ -530,8 +533,8 @@
                             <p class="card-text" style="margin-bottom:6px;margin-top:6px;color:var(--primaryGrey);">
                                 Price: 20,000LL
                             </p>
-                            <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
-                                Is it worth swimming in shark-infested waters to surf a 50-foot, career-record wav...
+                            <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:forestgreen;">
+                                Someone wants to sell this book
                             </p>
                             <p class="card-text" style="margin-bottom: 0px;margin-top:6px;color:black;font-size:13px;font-weight:bold;">
                                 <i class="material-icons" style="font-size:12px;">location_on</i> Beirut
@@ -560,6 +563,9 @@
                             </h5>
                             <p class="card-text" style="margin-bottom:6px;margin-top:6px;color:var(--primaryGrey);">
                                 Price: N/A
+                            </p>
+                            <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
+                                No one has offered to sell this book
                             </p>
                             <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
                                 <button class="waves-effect waves-light btn-small">
@@ -592,8 +598,8 @@
                             <p class="card-text" style="margin-bottom:6px;margin-top:6px;color:var(--primaryGrey);">
                                 Price: 20,000LL
                             </p>
-                            <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
-                                Is it worth swimming in shark-infested waters to surf a 50-foot, career-record wav...
+                            <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:forestgreen;">
+                                Someone wants to sell this book
                             </p>
                             <p class="card-text" style="margin-bottom: 0px;margin-top:6px;color:black;font-size:13px;font-weight:bold;">
                                 <i class="material-icons" style="font-size:12px;">location_on</i> Beirut
